--- a/index.html
+++ b/index.html
@@ -3,44 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/estilos.css" rel="stylesheet" type="text/css">
-    <title>Pagina Principal</title>
-    <script data-dapp-detection>
-    </script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos.css">
+
+    <title>Principal</title>
 </head>
 <body>
-    <header>
-        <!--Alinear al centro y colocar la letra en azul-->
-        <h1>Desarrollo de una Aplicacion-  Hosting</h1>
-        <!--Imagen : alinear la imagen al centro-->
-        <img src="img/tecsup.jpg" alt="">
-    </header>
-    <nav>
-        <!--colocar las opciones del navegador al centro con un tipo
-        de letra y un tamaño de letra mas grande, enlazar las opciones
-        con su respectiva pagina-->
-        <font face="arial" size="7px">
-            <a href="desarrollo01.html">Desarrollo 01</a>
-        </font>
-        <font face="arial" size="7px">
-            <a href="desarrollo02.html">Desarrollo 02</a>
-        </font>
-        <font face="arial" size="7px">
-            <a href="desarrollo03.html">Desarrollo 03</a>
-        </font>
+  <!-- NAVEGADOR -->
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html"><img src="img/vsg.png" style="width: 60%"></a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">MOUSE <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://co.vsglatam.com/pages/contacto1">CONTACTO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://co.vsglatam.com/collections/ofertas">MÁS PRODUCTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://valqui2003.blogspot.com/">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Registro de reclamos.html">RECLAMOS</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    <section>
-         <!--crear un marco o un cuadro de color x o imagen de fondo-->
-        <img src="img/tlou2.png" alt="" height="800px" width="1400px"></div>
-    </section>
-        <p><input type="button" name="boton" value="hacer click" onclick="probar()"><p/>
-    <footer>
-        <!--al centro y de color azul-->
-        <h2 class="propiedad">Desarrollado por : Genaro Valqui</h2>
-    </footer>
-    <script src="js/codigo.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+  </nav>
+  
+ <!--  FIN NAVEGADOR -->
+ 
+ <!-- INICIO  -->
+ <body>
+  <div class="card-deck" >
+    <div class="card body-dark mb-3" style="max-width: 30rem; height: 685px;" >
+      <div class="card-header">Producto 1</div>
+      <div class="card" style="max-width: 40rem; height: 605px">
+        <img class="card-img-top" src="img/1.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Aquila Mouse</h5>
+          <p class="card-text">AQUILA tiene un diseño ultra ligero, está equipado con 6 niveles de DPI y 6 botones programables a través de software para ser tu compañero durante las partidas.</p>
+          <a href="aquila.html" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+    
+    <div class="card border-dark mb-3" style="margin-left: auto; max-width: 30rem; height: 686px;" >
+      <div class="card-header">Producto 2</div>
+      <div class="card" style="max-width: 40rem; height: 605px">
+        <img class="card-img-top" src="img/aquilaAirverde.png" height="430px" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Aquila Air Mouse</h5>
+          <p class="card-text">Vive la experiencia de volar y siente la libertad bajo tu mano, geometría perfecta donde las palabras sobran y la experiencia comienza. ¡Cada clic del Air es un placer!</p>
+          <a href="aquilaAir.html" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+    <div class="card border-dark mb-3" style="margin-left: auto; max-width: 30rem; height: 686px;" >
+      <div class="card-header">Producto 3</div>
+      <div class="card" style="max-width: 40rem; height: 605px">
+        <img class="card-img-top" src="img/cetus2.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Cetus Mouse</h5>
+          <p class="card-text">CETUS, el mouse con laterales modulares magnéticos único en su clase, especialmente diseñado para juegos MOBA y MMORPG.</p>
+          <a href="cetus.html" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+  </div>
+ </body>
+ 
+
+ 
+<!-- FIN INICIO -->
+    
 </html>
