--- a/Registro de reclamos.html
+++ b/Registro de reclamos.html
@@ -21,6 +21,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">MOUSE <span class="sr-only">(current)</span></a>
           </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Registro.html">REGISTRATE</a>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="https://co.vsglatam.com/pages/contacto1">CONTACTO</a>
           </li>
