--- a/aquilaAir.html
+++ b/aquilaAir.html
@@ -11,7 +11,7 @@
 <body>
   <!-- NAVEGADOR -->
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html"><img src="img/vsg.png" style="width: 60%"></a>      
+    <a class="navbar-brand" href="index.html"><img src="img/vsg.png" style="width: 60%"></a>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,6 +21,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">MOUSE <span class="sr-only">(current)</span></a>
           </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Registro.html">REGISTRATE</a>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="https://co.vsglatam.com/pages/contacto1">CONTACTO</a>
           </li>
